Added js styling

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 	<div class="progress"></div>
 
 	<script src="node_modules/shower-core/shower.min.js"></script>
-	<script src="node_modules/prismjs/prism.js"></script>
+	<script src="pictures/prism.js"></script>
 	<!-- Copyright © 2017 Yours Truly, Famous Inc. -->
 
 </body>
